<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/customactionbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/Firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/firstname"
                    android:maxLength="50"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/Lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastname"
                    android:maxLength="50"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="10"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/Confirmpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirmpass"
                    android:inputType="textPassword"
                    android:maxLength="10"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/Phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:maxLength="15"
                    android:singleLine="true" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <Spinner
                        android:id="@+id/bloodgrp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:prompt="@string/choose_blood_group" />
                </LinearLayout>

                <EditText
                    android:id="@+id/Allergies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Allergies"
                    android:inputType="text"
                    android:maxLength="50"
                    android:singleLine="true" />

                <CheckBox
                    android:id="@+id/diabetic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/is_diabetic"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/Bloodpressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blood_pressure"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/cancer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancer"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/Policehelpline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/police_helpline"
                    android:inputType="phone"
                    android:maxLength="15"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/HospitalHelpLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hospital_helpline"
                    android:inputType="phone"
                    android:maxLength="15"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/FireHelpLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fire_helpline_number"
                    android:inputType="phone"
                    android:maxLength="15"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/FriendHelp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/incaseofemergency"
                    android:inputType="phone"
                    android:maxLength="15"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/EmergncyEmail"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/action_background"
                    android:text="Email Address"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/EmergencyPhone"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/action_background"
                    android:text="Phone Number"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>