<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/customactionbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/firstname"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/Firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:maxLength="50"
                    android:singleLine="true"
                    android:textColor="@color/white" >
                </EditText>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lastname"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/LastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:maxLength="50"
                    android:singleLine="true"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:singleLine="true"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/Phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:inputType="phone"
                    android:maxLength="15"
                    android:singleLine="true"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blood_group"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <Spinner
                        android:id="@+id/bloodgrp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:prompt="@string/choose_blood_group" />
                </LinearLayout>

                <TextView
                    android:id="@+id/allergiesLable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/allergies"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/allergies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:inputType="text"
                    android:maxLength="50"
                    android:singleLine="true"
                    android:textColor="@color/white" />

                <CheckBox
                    android:id="@+id/diabetic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/is_diabetic"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/Bloodpressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/blood_pressure"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/cancer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/cancer"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Police station helpline Number"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/policehelpno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:inputType="phone"
                    android:maxLength="15"
                    android:singleLine="true"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Hospital helpline Number"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/hospitalhelpno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:inputType="phone"
                    android:maxLength="15"
                    android:singleLine="true"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Fire station helpLine Number"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/firestation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:inputType="phone"
                    android:maxLength="15"
                    android:singleLine="true"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="In case of emergency number"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/friendno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:inputType="phone"
                    android:maxLength="15"
                    android:singleLine="true"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>